# vintage

./: .gitignore  .pylintrc  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.py  testing_requirements.txt  tox.ini
doc/: changelog.rst  conf.py  index.rst
tests/: test_readme_doctest.py  test_vintage.py
vintage/: __init__.py
